--- a/src/components/main-page/MainPage.css
+++ b/src/components/main-page/MainPage.css
@@ -6,6 +6,9 @@
     line-height: 24px;
     margin-left: 1%;
     margin-bottom: 1%;
+    height: 35px;
+    width: 50%;
+    transform: translateX(4%);
 }
 .main-container{
     margin: 1% 2%;
@@ -17,7 +20,7 @@
     background: #4553F0;
 border-radius: 24px;
 width: 152px;
-height: 40px;
+height: 35px;
 margin-left: -2%;
 }
 .result{
